# AI-Powered-Co-Browsing-for-Portfolio

./: .gitignore  README.md  README_AI_COBROWSING.md  audit.txt  package-lock.json  package.json  tsc_errors.txt  tsconfig.tsbuildinfo
ai-backend/: gemini_agent.py  main.py  models.py  portfolio_router.py  pyproject.toml  test_api.py  tools_schema.py
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/about/: page.tsx
src/app/achievements/: page.tsx
src/app/contact/: page.tsx
src/app/education/: page.tsx
src/app/experience/: page.tsx
src/app/projects/: page.tsx
src/app/services/: page.tsx
src/app/skills/: page.tsx
src/components/: ChatWidget.tsx  ChatWindow.tsx  ContactSection.tsx  HeroSection.tsx  MessageBubble.tsx  Navbar.tsx  ToolExecutor.ts
src/services/: api.ts  domExtractor.ts
